--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "supertest": "^3.4.2"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "mongoose": "^5.4.13",
     "mongoose-seed": "^0.6.0"
