--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "googleapis": "^39.2.0",
+    "ical.js": "^1.3.0",
+    "ics-to-json": "^1.0.0",
     "mongoose": "^5.4.13",
     "mongoose-seed": "^0.6.0",
     "serverless-http": "^1.9.1"
